- feat : thêm tính năng hiển thị thông tin cá nhân người dùng

--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -223,25 +223,30 @@
             <div class="profile-card">
                 <h2 class="card-title">Thông tin cá nhân</h2>
                 <div class="info-grid">
-                    <div class="info-item">
+                    <div th:each="info_user : ${info_user}" class="info-item">
                         <div class="info-label">Tên đăng nhập</div>
-                        <div th:text="${username}" name="username" class="info-value">username</div>
+                        <div th:text="${info_user.getUsername()}" name="username" class="info-value">username</div>
                     </div>
                     <div class="info-item">
                         <div class="info-label">Vai trò</div>
-                        <div th:text="${role}" name="role" class="info-value">role</div>
+                        <div th:text="${info_user.getRole()}" name="role" class="info-value">role</div>
+                    </div>
+                    <div class="info-item">
+                        <div class="info-label">ID người dùng</div>
+                        <div th:text="${info_user.getId()}" class="info-value">0</div>
                     </div>
                     <div class="info-item">
                         <div class="info-label">Ngày tham gia</div>
-                        <div class="info-value">08/11/2025</div>
+                        <div th:text="${#temporals.format(info_user.createdAt, 'dd/MM/yyyy HH:mm:ss')}"
+                             class="info-value"></div>
                     </div>
                     <div class="info-item">
                         <div class="info-label">PIN Đang Sử Dụng</div>
-                        <div class="info-value">08/11/2025</div>
+                        <div th:text="${model_battery}" class="info-value">Không có</div>
                     </div>
                     <div class="info-item">
                         <div class="info-label">Gói Dịch Vụ</div>
-                        <div class="info-value">Gói Nâng Cao 90 ngày</div>
+                        <div th:text="${pack_name}" class="info-value">Không có</div>
                     </div>
                 </div>
             </div>
