--- a/src/main/resources/templates/user/header-user.html
+++ b/src/main/resources/templates/user/header-user.html
@@ -9,16 +9,10 @@
             <button class="nav-toggle" aria-expanded="false" aria-controls="menu">☰</button>
             <ul id="menu" class="menu">
                 <li><a href="my">Trang chủ</a></li>
-                <li><a href="#">Đổi pin</a></li>
-                <li class="has-sub">
-                    <a href="#" aria-haspopup="true" aria-expanded="false">Đặt lịch</a>
-                    <ul class="submenu" aria-label="Đặt lịch">
-                        <li><a href="#">Tìm kiếm trạm gần nhất</a></li>
-                        <li><a href="#">Đặt lịch đổi pin</a></li>
-                    </ul>
-                </li>
+                <li><a href="dashboard">Đổi pin</a></li>
+                <li><a href="datlich">Đặt lịch</a></li>
                 <li><a href="contact">Hỗ trợ</a></li>
-                <li><a href="contact">Đăng ký gói</a></li>
+                <li><a href="pricing">Đăng ký gói</a></li>
             </ul>
         </nav>
 
@@ -107,7 +101,7 @@
                         <li><a href="profile">Profile</a></li>
                         <li><a href="lichsu">Lịch sử giao dịch</a></li>
                         <li class="logout-item">
-                            <a href="logout.php" class="logout-link">Đăng xuất</a>
+                            <a href="/api/logout" class="logout-link">Đăng xuất</a>
                         </li>
                     </ul>
                 </div>
