--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -9,13 +9,7 @@
             <ul id="menu" class="menu">
                 <li><a href="/">Trang chủ</a></li>
                 <li><a href="#">Đổi pin</a></li>
-                <li class="has-sub">
-                    <a href="#" aria-haspopup="true" aria-expanded="false">Đặt lịch</a>
-                    <ul class="submenu" aria-label="Đặt lịch">
-                        <li><a href="#">Tìm kiếm trạm gần nhất</a></li>
-                        <li><a href="#">Đặt lịch đổi pin</a></li>
-                    </ul>
-                </li>
+                <li><a href="#">Đặt lịch</a></li>
                 <li><a href="contact">Hỗ trợ</a></li>
                 <li><a href="packages">Đăng ký gói</a></li>
             </ul>
