--- a/src/main/resources/templates/admin/fragments/_header.html
+++ b/src/main/resources/templates/admin/fragments/_header.html
@@ -75,6 +75,12 @@
                 </li>
 
                 <li class="nav-item">
+                    <a th:href="@{/admin/reservations}" class="nav-link" th:classappend="${currentPage == 'reservations'} ? 'active' : ''">
+                        <i class="nav-icon fas fa-calendar-check"></i> <p>Quản lý Đặt lịch</p>
+                    </a>
+                </li>
+
+                <li class="nav-item">
                     <a th:href="@{/admin/tickets}" class="nav-link" th:classappend="${currentPage == 'tickets'} ? 'active' : ''">
                         <i class="nav-icon fas fa-headset"></i> <p>Hỗ trợ khách hàng</p>
                     </a>
