--- a/src/main/resources/templates/staff/fragments/_header.html
+++ b/src/main/resources/templates/staff/fragments/_header.html
@@ -42,6 +42,13 @@
                         <i class="nav-icon fas fa-battery-full"></i> <p>Quản lý Pin</p>
                     </a>
                 </li>
+
+                <li class="nav-item">
+                <a th:href="@{/staff/reservations}" class="nav-link" th:classappend="${currentPage == 'reservations'} ? 'active' : ''">
+                    <i class="nav-icon fas fa-calendar-check"></i> <p>Quản lý Đặt lịch</p>
+                </a>
+                </li>
+
                 <li class="nav-item">
                     <a th:href="@{/staff/transactions}" class="nav-link" th:classappend="${currentPage == 'transactions'} ? 'active' : ''">
                         <i class="nav-icon fas fa-exchange-alt"></i> <p>Quản lý Giao dịch</p>
